# effect-1

./: 01_denoise.py  02_extract_speech.py  03_apply_effects.py  README.md  audio_analyzer.py  compare_outputs.py  debug_imports.py  directional_mic_pipeline.py  directional_mic_pipeline_vmd.py  drc_engine.py  main.py  proximity_effect_reducer.py  pyproject.toml  requirements.txt  speech_normalizer.py  vad_module.py
